Add image and more styling
added asset images and futher styled elements

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <div class="nav-logo">
 
-            <img src="../assets/project_logo/logo.PNG" />
+            <img src="assets/project_logo/logo.svg" />
         </div>
 
 
@@ -85,7 +85,7 @@
         <div class="card-container">
 
             <div class="service-card">
-                <img src="./assets/icons/responsive.JPG"  alt="image"/>
+                <img src="assets/icons/responsive.svg"  alt="image"/>
                 <h4>Responsive</h4>
 
                 <p>
@@ -105,7 +105,7 @@
 
 
             <div class="service-card">
-                <img src="#" />
+                <img src="assets/icons/customizable.svg" />
                 <h4>Customizable</h4>
 
                 <p>
@@ -121,7 +121,7 @@
             </div>
 
             <div class="service-card">
-                <img src="#" />
+                <img src="assets/icons/premium.svg" />
                 <h4>Premium</h4>
 
                 <p>
@@ -137,7 +137,7 @@
             </div>
 
             <div class="service-card">
-                <img src="#" />
+                <img src="assets/icons/documentation.svg" />
                 <h4>Documentation</h4>
 
                 <p>
@@ -154,8 +154,15 @@
 
         </div>
 
+        </section>
 
-        <div class="perspective">
+    <!--Perspective section-->
+
+
+        <section class="perspective-container">
+
+
+        <div class="perspective-text">
 
             <h4>
                 Front makes you look at things <br />
@@ -172,9 +179,9 @@
 
         </div>
 
-        <div>
+        <div class="perspective-image">
 
-            <img src="../assets/banners/banner_one.jpg" />
+            <img src="assets/banners/banner_one.jpg" />
 
         </div>
 
@@ -185,65 +192,83 @@
 
     <!--Why Section-->
 
-    <section>
+        <section>
 
-        <div class="why-front">
+            <div class="why-front">
 
-            <h2>Why front?</h2>
-            <p>
-                Front is an incredibly beautiful, fully responsive, and mobile-first projects on <br />
-                the web - it is the starting point for creative sites <br />
+                <h2>Why front?</h2>
+                <p>
+                    Front is an incredibly beautiful, fully responsive, and mobile-first projects on <br />
+                    the web - it is the starting point for creative sites <br />
 
-            </p>
-        </div>
-
-
-        <hr />
+                </p>
+            </div>
 
 
-        <div>
-            <img src="../assets/banners/banner_two.jpg" />
-        </div>
+            <hr />
 
-        <div>
 
-            <img src="#" />
+            <div class="full-image">
+                <img src="assets/banners/banner_two.jpg" />
+            </div>
+
+            </section>
+
+
+    <!--executive section-->
+
+
+            <section class="executive-container">
+
+
+            <div class="executive-director">
+
+                <img src="assets/people/woman_three.jpg" />
 
             </div>
 
-        <div class="testimonial">
-
-            <p>
-                The template is really nice and offers quite a <br />
-                large set of options. It's beautiful and the <br />
-                coding is done quickly and seamlessly. Thank <br />
-                you!
-
-            </p>
-
-            <h3>Christina Kray</h3>
-            <h4>Exacutive Director</h4>
+            
 
 
-        </div>
+            <div class="testimonial">
 
-    </section>
+                <img src="assets/company_logos/hubspot.svg" class="hubspot-logo">
 
-    <!--Trust and pricing-->
+                <p>
+                    The template is really nice and offers quite a <br />
+                    large set of options. It's beautiful and the <br />
+                    coding is done quickly and seamlessly. Thank <br />
+                    you!
+
+                </p>
+
+                <h3>Christina Kray</h3>
+                <h4>Exacutive Director</h4>
+
+
+            </div>
+
+        </section>
+
+    <!--Trust branding-->
 
     <div class="trusted">
 
     <h4>TRUSTED BY WORLD'S BEST</h4>
         </div>
-    <div>
+    <div class="logo-container">
 
-    <img src="" />
-    <img src="" />
-    <img src="" />
-    <img src="" />
-    <img src="" />
+    <img src="assets/company_logos/weebly.svg" />
+    <img src="assets/company_logos/uber.svg" />
+    <img src="assets/company_logos/spotify.svg" />
+    <img src="assets/company_logos/airbnb.svg" />
+    <img src="assets/company_logos/slack.svg" />
         </div>
 
+
+
+
+    <!--Pricing-->
 
     <div class="pricing-header">
 
@@ -277,7 +302,7 @@
 
 
         <div id="card2" class="pricing-subcard">
-            <img src="#" />
+            <img src="assets/icons/components.svg" />
             <h4>Hundreds of components</h4>
 
             <p>
@@ -292,7 +317,7 @@
 
 
         <div id="card3 "class="pricing-subcard">
-            <img src="#" />
+            <img src="assets/icons/images.svg" />
             <h4>Images included</h4>
 
             <p>
@@ -306,7 +331,7 @@
 
 
         <div id="card4" class="pricing-subcard">
-            <img src="#" />
+            <img src="assets/icons/cancel.svg" />
             <h4>Cancel anytime</h4>
 
             <p>
@@ -318,7 +343,7 @@
         </div>
 
         <div id="card5" class="pricing-subcard">
-            <img src="#" />
+            <img src="assets/icons/moneyback.svg" />
             <h4>Money back</h4>
 
             <p>
@@ -356,16 +381,19 @@
             fact that I have total creative freedom..."
         </p>
             </div>
-        <div class="executive">
+        <div class="head-of-comm">
 
         <h4>Charlotte Moore</h4>
         <h5>Head of Commercials, Slack</h5>
 
             </div>
 
-        <img src="#" />
-        <img src="#" />
-        <img src="#" />
+        <div class="hire-human">
+
+        <img src="assets/people/woman_two.jpg" />
+        <img src="assets/people/woman_one.jpg" />
+        <img src="assets/people/man_one.jpg" />
+            </div>
 
     </div>
 
@@ -373,8 +401,8 @@
     <div class="form">
 
 
-        <h4>Fill out the form and we'll be in touch as soon as <br />
-        possible</h4>
+        <h2>Fill out the form and we'll be in touch as soon as <br />
+        possible</h2>
         <div class="input-group">
         <input type="text" value="First Name" />
         <input type="text" value="Last Name" />
@@ -442,9 +470,9 @@
         <section class="footer-container">
 
         <div class="contact-footer">
-            <img src="#" />
+            <img src="assets/project_logo/logo.svg" />
             <p><i class="fa-solid fa-location-arrow"></i> 153 Williamson Plaza, Maggieberg</p>
-            <p class="phone-number"><i class="fa-solid fa-phone"></i> +1 (062) 109-9222</p>
+            <p id="phone-number"><i class="fa-solid fa-phone"></i> +1 (062) 109-9222</p>
         </div>
 
         <div class="company-footer">
@@ -453,7 +481,7 @@
 
             <ul>
                 <li> <a href="">About</a> </li>
-                <li> <a href="">Career</a> </li>
+                <li> <a href="">Career <h6> We're Hiring</h6> </a> </li>
                 <li> <a href="">Blog</a> </li>
                 <li> <a href="">Customers</a> </li>
                 <li> <a href="">Hire us</a> </li>
@@ -492,7 +520,7 @@
 
         <div class="resources-footer">
 
-            <h3>Company</h3>
+            <h3>resources</h3>
 
             <ul>
                 <li> <a href=""><i class="fa-solid fa-circle-info"></i> Help</a> </li>
@@ -510,9 +538,9 @@
 
         <section class="bottom-footer">
 
-        <div>
+        <div id="bottom-directory">
 
-            <p>Privacy > Terms > Site Map</p>
+            <p>Privacy & policy > Terms > Site Map</p>
 
 
         </div>
@@ -526,7 +554,7 @@
 
 
             <select>
-                <option> <span>&#127482 &#127480;</span> United States</option>
+                <option> &#127482;&#127480; United States</option>
             </select>
 
         </div>
@@ -544,7 +572,7 @@
                 <h6>@Front. 2022 Responsive designs. All rights reserved</h6>
 
                 <h6>
-                    When you visit or interact with out sites, service or tools, we or our authorized service providers may
+                    When you visit or interact with out sites, service or tools, we or our authorized service providers may<br />
                     use cookies for storing information to help provide you with a better faster and safer experience and
                     for marketing purposes
                 </h6>
