Refactor and add more css

--- a/index.html
+++ b/index.html
@@ -274,6 +274,8 @@
 
             <section class="executive-container">
 
+                <div class="executive-dots"> <img src="./assets/abstract/dots.svg" alt=""> </div>
+
 
             <div class="executive-director">
 
