Finalize mobile layout
remove horizontal scroll from mobile viewport and further layout
elements

--- a/index.html
+++ b/index.html
@@ -651,13 +651,13 @@
 
             <div class="social-buttons">
 
-                <button><a href="#" class="fa fa-facebook"></a></button>
-                <button><a href="#" class="fa fa-google"></a></button>
-                <button><a href="#" class="fa fa-twitter"></a></button>
-                <button><i class="fa-brands fa-github"></i></button>
+                <button><a href="#" id="face" class="fa fa-facebook"></a></button>
+                <button><a href="#" id="goog" class="fa fa-google"></a></button>
+                <button><a href="#" id="twit" class="fa fa-twitter"></a></button>
+                <button><a href="#" id="gith"<i class="fa-brands fa-github"></i></a></button>
 
 
-                <select>
+                <select id="country">
                     <option> &#127482;&#127480; United States</option>
                 </select>
 
