--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
 
         <div class="empower">
             <h1>
-                Empowering <br />
-                teams with the <br />
+                Empowering 
+                teams with the 
                 freedom
             </h1>
             <p>Own the unlimited power of the web development</p>
@@ -150,11 +150,11 @@
                 <h4>Responsive</h4>
 
                 <p>
-                    It is a long established <br />
-                    fact that a reader will be <br />
-                    distracted by the readable <br />
-                    content of a page when <br />
-                    looking at its layout.<br />
+                    It is a long established 
+                    fact that a reader will be 
+                    distracted by the readable 
+                    content of a page when 
+                    looking at its layout.
                 </p>
 
                 <a href="#">Learn More</a>
@@ -170,11 +170,11 @@
                 <h4>Customizable</h4>
 
                 <p>
-                    It is a long established <br />
-                    fact that a reader will be <br />
-                    distracted by the readable <br />
-                    content of a page when <br />
-                    looking at its layout.<br />
+                    It is a long established 
+                    fact that a reader will be 
+                    distracted by the readable 
+                    content of a page when 
+                    looking at its layout.
                 </p>
 
                 <a href="#">Learn More</a>
@@ -186,11 +186,11 @@
                 <h4>Premium <span>Sketch</span></h4>
 
                 <p>
-                    It is a long established <br />
-                    fact that a reader will be <br />
-                    distracted by the readable <br />
-                    content of a page when <br />
-                    looking at its layout.<br />
+                    It is a long established 
+                    fact that a reader will be 
+                    distracted by the readable 
+                    content of a page when 
+                    looking at its layout.
                 </p>
 
                 <a href="#">Learn More</a>
@@ -202,11 +202,11 @@
                 <h4>Documentation</h4>
 
                 <p>
-                    It is a long established <br />
-                    fact that a reader will be <br />
-                    distracted by the readable <br />
-                    content of a page when <br />
-                    looking at its layout.<br />
+                    It is a long established 
+                    fact that a reader will be 
+                    distracted by the readable 
+                    content of a page when 
+                    looking at its layout.
                 </p>
 
                 <a href="#">Learn More</a>
@@ -226,7 +226,7 @@
         <div class="perspective-text">
 
             <h4>
-                Front makes you look at things <br />
+                Front makes you look at things 
                 from a different prospective
             </h4>
 
@@ -259,8 +259,8 @@
 
             <h2>Why front?</h2>
             <p>
-                Front is an incredibly beautiful, fully responsive, and mobile-first projects on <br />
-                the web - it is the starting point for creative sites <br />
+                Front is an incredibly beautiful, fully responsive, and mobile-first projects on 
+                the web - it is the starting point for creative sites 
 
             </p>
         </div>
@@ -333,9 +333,9 @@
             <img src="assets/company_logos/hubspot.svg" class="hubspot-logo">
 
             <p>
-                The template is really nice and offers quite a <br />
-                large set of options. It's beautiful and the <br />
-                coding is done quickly and seamlessly. Thank <br />
+                The template is really nice and offers quite a 
+                large set of options. It's beautiful and the 
+                coding is done quickly and seamlessly. Thank 
                 you!
 
             </p>
@@ -384,13 +384,13 @@
             <hr />
 
             <p>
-                Start your Front business now. 100% <br />
-                guaranteed money back. No <br />
+                Start your Front business now. 100%
+                guaranteed money back. No
                 question asked.
 
             </p>
 
-            <button class="button-play">
+            <button id="card-butt" class="button-play">
                 <a href="#"><i class="fa-solid fa-circle-play"></i>Play Video</a>
             </button>
 
@@ -466,7 +466,7 @@
             <h2>Hire Us</h2>
 
             <p>
-                Whatever your goal - <br />
+                Whatever your goal -
                 We will get you there
             </p>
 
@@ -475,8 +475,8 @@
             <div class="hire-subheader">
 
                 <p>
-                    "I love front! I love the ease of use, I love the <br />
-                    fact that I have total creative freedom..."
+                   <i> "I love front! I love the ease of use, I love the
+                    fact that I have total creative freedom..."</i>
                 </p>
             </div>
 
@@ -504,7 +504,7 @@
 
 
             <h2>
-                Fill out the form and we'll be in touch as soon as <br />
+                Fill out the form and we'll be in touch as soon as
                 possible
             </h2>
             <div class="input-group">
@@ -544,13 +544,13 @@
 
                 <p>
                     <input type="checkbox" />
-                    Yes, I'd like to recieve occasional marketing emails <br />
+                    Yes, I'd like to recieve occasional marketing emails <br 
                     from Front. I have the right to opt out at any time.
                 </p>
 
 
                 <a href="#">View privacy policy</a>
-                <a href="#">View privacy policy</a>
+                
                 <br />
 
                 <div class="form-button">
@@ -676,7 +676,7 @@
                 <h6>@Front. 2022 Responsive designs. All rights reserved</h6>
 
                 <h6>
-                    When you visit or interact with out sites, service or tools, we or our authorized service providers may<br />
+                    When you visit or interact with out sites, service or tools, we or our authorized service providers may
                     use cookies for storing information to help provide you with a better faster and safer experience and
                     for marketing purposes
                 </h6>
